# stock-ai-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini
config/agents/: models.yaml  thresholds.yaml
config/crawlers/: sources.yaml  stock_tickers.yaml
config/postgres/: init-prefect-db.sh
config/prompts/fundamental_analysis/: bctc_analysis.yaml  ratio_comparison.yaml
config/prompts/lifecycle/: summarize_article.yaml
config/scheduler/: schedules.yaml
docs/: data-pipeline-guide.md
services/app/: Dockerfile  main.py  pyproject.toml
services/app/agents/: __init__.py  graph.py  morning_briefing_graph.py  state.py
services/app/agents/fundamental_analysis/: node.py
services/app/agents/market_context/: __init__.py  node.py
services/app/agents/morning_briefing/: nodes.py
services/app/agents/orchestrator/: __init__.py  confidence.py  formatter.py  integrity_guard.py  node.py
services/app/agents/technical_analysis/: node.py
services/app/api/: __init__.py  router.py
services/app/api/v1/: analysis.py  health.py
services/app/pipelines/: __init__.py
services/app/routers/: internal.py
services/app/telegram/: __init__.py  _compat.py  bot.py  sender.py
services/app/telegram/formatters/: briefing_formatter.py
services/crawler/: Dockerfile  main.py  pyproject.toml
services/crawler/embedding/: __init__.py  embedding_pipeline.py  models.py
services/crawler/lifecycle/: __init__.py  lifecycle_pipeline.py  models.py
services/crawler/macro/: __init__.py  macro_crawl_manager.py  macro_data_repo.py  models.py  sbv_scraper.py  verify_macro_sources.py  vnstock_macro_client.py
services/crawler/market_data/: __init__.py  indicator_calculator.py  indicator_manager.py  indicator_repo.py  mock_data.py  stock_crawl_manager.py  stock_data_repo.py  ticker_config.py  verify_vnstock.py  vnstock_client.py
services/crawler/middleware/: __init__.py  rate_limiter.py  robots_checker.py
services/crawler/news/: __init__.py  article_repo.py  base_crawler.py  cafef_crawler.py  crawl_manager.py  vietstock_crawler.py  vneconomy_crawler.py
services/crawler/pipeline/: __init__.py
services/crawler/spiders/: __init__.py
services/scheduler/: Dockerfile  config_loader.py  main.py  pyproject.toml
services/scheduler/flows/: data_pipeline.py  morning_briefing.py
services/scheduler/tasks/: http_trigger.py
shared/: __init__.py  pyproject.toml
shared/db/: __init__.py  alembic.ini  base.py  client.py
shared/db/migrations/: env.py
shared/db/migrations/versions/: rev_001_initial_schema.py  rev_002_add_articles_category.py
shared/db/orm/: __init__.py  alert.py  article.py  market_data.py  recommendation.py
shared/db/repositories/: recommendation_repo.py
shared/llm/: __init__.py  client.py  config_loader.py  embedder.py  prompt_loader.py
shared/logging/: __init__.py  setup.py
shared/models/: __init__.py  agent_output.py  alert.py  article.py  financial.py  market_data.py  recommendation.py
shared/utils/: __init__.py  datetime_utils.py  text_utils.py
tests/: conftest.py
tests/integration/: test_migrations.py  test_placeholder.py
tests/unit/: test_recommendation_repo.py
(+65 files in other folders)
