[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Shared models, utilities, and infrastructure for stock-ai-agent"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "openai>=1.0",
    "jinja2>=3.1",
    "tenacity>=8.0",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
]
