[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "FastAPI + LangGraph AI agent application service"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.1",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
