[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawler"
version = "0.1.0"
description = "News and market data crawler service"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "scrapy>=2.11",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
