[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawler"
version = "0.1.0"
description = "News and market data crawler service"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "scrapy>=2.11",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "vnstock>=3.0",
    "pandas>=2.0",
    "tenacity>=8.0",
    "pyrate-limiter>=4.0",
    "lxml>=5.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
