[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scheduler"
version = "0.1.0"
description = "Prefect-based task scheduler service"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "prefect>=2.19",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
